; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-name.c_repo_get_oid_tree.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-name.c_repo_get_oid_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.object_id = type { i32 }
%struct.object_context = type { i32 }

@GET_OID_TREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_get_oid_tree(%struct.repository* %0, i8* %1, %struct.object_id* %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca %struct.object_context, align 4
  store %struct.repository* %0, %struct.repository** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.object_id* %2, %struct.object_id** %6, align 8
  %8 = load %struct.repository*, %struct.repository** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* @GET_OID_TREE, align 4
  %11 = load %struct.object_id*, %struct.object_id** %6, align 8
  %12 = call i32 @get_oid_with_context(%struct.repository* %8, i8* %9, i32 %10, %struct.object_id* %11, %struct.object_context* %7)
  ret i32 %12
}

declare dso_local i32 @get_oid_with_context(%struct.repository*, i8*, i32, %struct.object_id*, %struct.object_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
